--- a/PartyInvites/Views/Home/Index.cshtml
+++ b/PartyInvites/Views/Home/Index.cshtml
@@ -13,6 +13,8 @@
 <body>
     <div>
         @ViewBag.Greeting (из представления)
+        <p>Мы собираемся на захватывающую вечеринку.</p>
+        @Html.ActionLink("Форма RSVP", "RsvpForm")
     </div>
 </body>
 </html>
